--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html >
+
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SSC</title>
+    <meta>
+    <title>Data Mining Twitter Using Python</title>
+    <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Halo</h1>
+<div class="text-center">
+    <div class="row">
+<h3>Workshop SSC</h3>       
+<small>Data Mining Using Python</small>
+</div>
+</div>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col s6">
+            <div class="panel panel-default">
+                <div class="panel-heading">Masukkan Kata Kunci</div>
+                <div class="panel-body">
+            <div class="input-field">
+                <input type="text" class="validate" name="tfFilter">
+            </div>
+            <button class="btn waves-effect waves-teal btn-block">Filter</button>
+        </div>
+        </div>
+        </div>
+        <div class="col s6">
+            <div class="panel panel-default">
+                <div class="panel-heading">Data From API</div>
+                <div class="panel-body">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col s6">
+        <div class="panel">
+            Filter : 
+        </div>
+        </div>
+    </div>
+</div>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col s6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Output Graph
+            </div>
+            <div class="panel-body"></div>
+        </div>
+        </div>
+    </div>
+</div>
+
 </body>
+
+<script type="text/javascript" src="js/jQuery-2.1.4.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </html>
