--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta>
     <title>Data Mining Twitter Using Python</title>
-    <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/materialize.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+{#    <link rel="stylesheet" type="text/css" href="css/materialize.min.css">#}
+{#    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">#}
+{#    <link rel="stylesheet" href="css/style.css">#}
 </head>
 <body>
 <div class="text-center">
@@ -24,7 +27,7 @@
                 <div class="panel-heading">Masukkan Kata Kunci</div>
                 <div class="panel-body">
             <div class="input-field">
-                <input type="text" class="validate" name="tfFilter">
+                <input type="text" class="validate" name="tfFilter" id="gggg">
             </div>
             <button class="btn waves-effect waves-teal btn-block">Filter</button>
         </div>
@@ -66,7 +69,10 @@
 
 </body>
 
-<script type="text/javascript" src="js/jQuery-2.1.4.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/jQuery-2.1.4.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+{#<script type="text/javascript" src="js/jQuery-2.1.4.min.js"></script>#}
+{#<script type="text/javascript" src="js/materialize.min.js"></script>#}
+{#<script type="text/javascript" src="js/bootstrap.min.js"></script>#}
 </html>
